<resources>
    <string name="app_name">Довідник виноградаря</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_bug">Хвороби і шкідники</string>
    <string name="menu_structure">Будова і формування</string>
    <string name="menu_reproduction">Розмноження</string>
    <string name="menu_preparation">Препарати</string>
    <string name="menu_library">Бібліотека</string>
    <string name="menu_settings">Налаштування</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, dolor at ligula faucibus imperdiet libero,din in, libero nec venenatis, luctus pretium imperdiet volutpat sit atque. Porttitor ligula vitae ultrices eleifend, felis suscipit iaculis turpis, pellentesque magna sem non. Vehicula quis commodo, tincidunt eu id morbi ut nullam. Enim ipsum vestibulum, semper etiam, amet vivamus mauris, aliquam at maecenas phasellus in aliquet, suspendisse varius. Eros sapien, vulputate porta, elit suspendisse, magna a ante wisi, ligula feugiat vel suspendisse lacus ipsum. At varius vestibulum volutpat fringilla consectetuer. Vulputate cursus mollis senectus dapibus amet, mauris sapien diam sed sodales, velit neque justo sit et. Vehicula diam sit pellentesque blandit dolore semper, a proin mi quisque eget vitae, tempus nisl, cum varius gravida urna condimentum nunc. Dignissimos adipiscing bibendum eget pretium bibendum justo, sit orci eros erat ligula litora. Id volutpat lacus urna aperiam porttitor aptent, metus auctor montes ut, lectus sed. Ut enim fringilla nec elementum, tortor vestibulum erat. Pede volutpat.
    </string>
    <string name="spektr_dii" translatable="false">Спектр дії</string>
    <string name="virobnyk" translatable="false">Виробник</string>
    <string name="kratnist_zastosuvannya" translatable="false">Кратність застосування</string>
    <string name="stroky_do_spogivannya" translatable="false">Строки до споживання</string>
    <string name="diucha_rechovina" translatable="false">Діюча речовина</string>
    <string name="nazva_preparatu" translatable="false">Назва препарату</string>
    <string name="tab_name_mildew" translatable="false">Мілдью</string>
    <string name="tab_name_oidium" translatable="false">Оїдіум</string>
    <string name="category_title_general">Налаштування</string>
    <string name="category_title_about">Про додаток</string>
    <string name="category_title_notifications">Налаштування сповіщень</string>
    <string name="title_theme">Вибрати тему</string>
    <string name="title_licenses">Ліцензії відкритого коду</string>
    <string name="title_version">Версія</string>
    <string name="app_description">
        Відродження туристичної галузі в Україні розпочинається з внутрішнього туризму.\n\nЦей проект створений з метою розвитку і популяризації енотуризму (винного туризму) в Закарпатті.\n\nВинний шлях – це додаток-путівник для поціновувачів вина і всіх, хто хоче отримати справжнє чуттєве задоволення від дегустації напою.\n\nВ рамках цього проекту ми ознайомлюємо користувача з традиційними для Закарпаття винними фестивалями та урочистими подіями.\n\nОдин з розділів онлайн-путівника розповість про місцевих виноробів дегустаційні зали, винні підвали, де ви отримаєте можливість скуштувати та придбати домашнього вина.    </string>
    <string name="app_short_description">Відродження туристичної галузі в Україні розпочинається з внутрішнього туризму. Цей проект створений з метою розвитку і популяризації енотуризму …
    </string>
    <string name="summary_description">Lorem ipsum dolor sit amet,/ Porttitor ligula vitae ultrices eleifend, felis suscipit iaculis turpis, pellentesque magna s
    </string>
    <string name="summary_licenses">Деталі ліцензії з відкритим кодом</string>
    <string name="summary_version">1.0</string>
    <string name="summary_vibrate">Вібрація при отриманні сповіщень</string>
    <string name="button_licenses">Закрити</string>
    <string name="pref_ringtone_silent">Без звуку</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="message_subject">Стосовно додатку GRAPES.</string>
    <string name="message_text">Привіт,</string>
    <string name="description_mildiu">Мілдью (несправжня борошниста роса) - найбільш поширене і саме шкідливе захворювання винограду. Вражає всі зелені органи рослини (листя, ягоди, пагони). Хвороба викликається грибом Plasmopara viticola Berl. et Toni - облігатним паразитом. Завезена в 1878 р з Північної Америки на південь Франції, далі поширилася на всі виноградники європейських країн. Ступінь розвитку хвороби і яку завдають шкоди в різних зонах виноградарства і в різні роки неоднакові: найбільш шкідливе захворювання при високій вологості повітря (часті дощі, роси, субтропічні зони).\n\nОзнаки захворювання.\n\nПерша ознака - поява влітку на верхній частині молодих і на дорослих, але ще зростаючих листках так званих маслянистих плям округлої форми будь-яких розмірів. У вологу погоду з нижнього боку на плямі утворюється білий борошнистий наліт. Поступово на тканині плями виникають некрози (відмирання клітин), що охоплюють все більшу частину; уражена тканина спочатку жовтіє, потім пляма може стати червонувато-бурою, з яскраво вираженими процесами відмирання і засихання. Сильно уражене листя опадає; зелені пагони можуть бути без листя. Після первинної появи на листках хвороба може перейти і на суцвіття (або грона), що дуже небезпечно для врожаю. Генеративні органи винограду зазвичай більш сприйнятливі до мілдью, ніж листя. На суцвіттях (або гронах) мілдью вражає гребінь, на якому з’являються видовжені плями інтенсивно зеленого кольору як би просочені водою. Тканина плями пізніше відмирає, це порушує нормальний сокорух і викликає всихання частини суцвіття (грона). Якщо міцелій проник в квітконіжки (плодоніжки) і квітки (зав’язі, молоді ягоди), то суцвіття (гроно з зав’язі ягід) покривається білим нальотом спороношенням гриба, а потім бутони і квітки засихають і обсипаються. Оптимальна тепмпература розвитку хвороби 20-25°С і висока вологість. За сезон може розвиватися до 16 генерацій збудника хвороби.\n\nМетоди боротьби.\n\nВирощування комплексностійких сортів, мульчування грунту під кущем, своєчасне внесення калійно-фосфорних добрив, видалення пасинків і профілактичні обробки контактними і системними фунгіцидами.\n\nПриблизні терміни обробок: перша проводиться, коли молоді пагони виросли на довжину 15-20 см, друга обробка проводиться перед цвітінням, третя після цвітіння коли ягода досягне розміру горошини.
 </string>
    <string name="description_oidium">Оїдіум (борошниста роса) - одночасно з несправжньою борошнистою росою збудник справжньої борошнистої роси, званої також оїдіумом, завдає найбільшої шкоди виноградарству. Хвороба викликається грибом Uncinula necator Burril. Була завезена з Північної Америки.\n\nОзнаки захворювання.\n\nНезабаром після початку росту пагонів винограду можна знайти серед них такі, які відстають у рості, їх листя виглядають кучерявим, і вони покриті повністю або частково сірувато-білої пилом. З червня цей сірувато-білий наліт частіше помітний на верхній і нижній сторонах листя. Все суцвіття і грона винограду і верхівки пагонів можуть виглядати, як ніби обсипані золою або борошном. Уражені суцвіття відмирають. Заражені ягоди висихають, а ягоди розміром з горошину лопаються і руйнуються пліснявими грибами або висихають в суху погоду. Оїдіум завдає великої шкоди, перш за все в результаті знищення грон винограду. Інкубаційний період, т.п. час від осідання конідій до появи грибного нальоту, становить в залежності від температури 7-14 днів. Конідії проростають при температурі вище 5°С, але краще за все при 25-35°С. Гриб з’являється здебільшого за помірно-теплої і сирої погоди, але може також швидко поширюватися і в періоди з низькою вологістю. Погано провітрювані розташування, а також грона всередині сільнолистових кущів винограду особливо схильні до поразки.\n\nМетоди боротьби.\n\nАгротехнічні прийоми сприяють провітрюванню кущів (підв’язування пагонів, пасинкування, обламування пагонів, боротьба з бур’янами). Терміни проведення обробок ті ж, що і проти мілдью.
 </string>
    <string name="description_filoksera">Філоксера - найнебезпечніший шкідник винограду. Живе тільки на виноградній рослині. Батьківщина філоксери - Північна Америка, звідки вона була завезена в Європу.\n\nВиноградна філоксера - попелиця зеленувато-жовтого кольору, ледь видима неозброєним оком. Відомі дві основні форми філоксери: коренева і листова, або галлова.\n\nОсоби кореневої форми філоксери спочатку лимонно-жовтого, а потім жовтувато-бурого кольору, з парою коротких тричленикових вусиків і довгим хоботком. Живе ця форма шкідника на коренях, підземному штамбі виноградного куща і на відводках європейських, американських сортів і гібридів - прямих виробників. Найбільш чутливі до цієї форми філоксери європейські сорти; менше пошкоджуються нею підщепні сорти і гібриди - прямі виробники.\n\nПоразка кореневої формою філоксери відбувається наступним чином. Личинка проколює хоботком тканину кореня або штамба. В місце уколу зі слиною виділяються ферменти, які сприяють перетворенню білків, жирів і вуглеводів клітини в форму, найбільш доступну філоксери. Таким чином руйнується велика кількість клітин, що входять до складу тканин.\n\nЛистова філоксера не розвивається на європейських сортах. Вона живе тільки на підщепних лозах і на деяких сортах гібридів - прямих виробників. У місцях, де личинки присмоктуються до листків, з нижньої сторони їх утворюються здуття, звані галлами, в яких личинки розвиваються. При дуже сильному зараженні насаджень шкідником галли з’являються на стеблі, вусиках, черешках листя.\n\nФілоксера неоднаково розвивається на різних ґрунтах. Існують ґрунти, сприятливі для її життєдіяльності. До них відносяться родючі легкі структурні чорноземні, шиферні та кам’янисті ґрунти. Менш сприятливі для філоксери важкі, безструктурні, запливаючі ґрунти - глинисті, солонцюваті, лесові, мулисті. Але є ґрунти, в яких філоксера розвиватися не може, - це піски. На них можна вирощувати всі європейські сорти на власних коренях, незважаючи на те, що ділянка може бути розташований в зоні поширення філоксери.\n\nМетоди боротьби.\n\nРадикальний метод боротьби з філоксерою полягає в тому, що при виявленні її на винограднику повністю викорчовують всі кущі в осередку і в навколишньому його карантинній зоні.\n\nХімічним способом боротьби з кореневою філоксерою є фумігація ґрунту спеціальними препаратами (фумігантами). В даний час цей спосіб не застосовується.\n\nПроти листової форми філоксери застосовують інсектициди.\n\nНайефективнішим і найбільш поширеним способом захисту від філоксери є вирощування винограду на філоксеростійких підщепах.
 </string>
</resources>